--- a/src/components/FriendCard/FriendCard.module.css
+++ b/src/components/FriendCard/FriendCard.module.css
@@ -4,3 +4,11 @@
 .isOffline {
   color: red;
 }
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.text {
+  margin: 0;
+}
