--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -4,6 +4,11 @@
   gap: 10px;
 }
 .card {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  height: 130px;
+  width: 80px;
   border-radius: 10px;
   border: 1.5px solid black;
 }
